--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <p>
         Hola mi nombre es Leonardo Ramirez
         Estoy creando este blog bajo las buenas practicas de 
-        software y desarrollo 
+        sofstware y desarrollo 
     </p>
 </body>
 </html>
