--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
     <title>Mi blog</title>
 </head>
 <body>
-    <h1>Este es el titulo de mi blog</h1>
+    <h1 class="titulo">Este es el titulo de mi blog</h1>
     <p>
         Hola mi nombre es Leonardo Ramirez
         Estoy creando este blog bajo las buenas practicas de 
