Cambios de titulo y contenido

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="estilos/estilos.css">
@@ -7,11 +7,13 @@
     <title>Mi blog</title>
 </head>
 <body>
-    <h1 class="titulo">Este es el titulo de mi blog</h1>
-    <p>
-        Hola mi nombre es Leonardo Ramirez
-        Estoy creando este blog bajo las buenas practicas de 
-        software y desarrollo 
-    </p>
+    <div id="Container">
+        <h1 id="Container-titulo">Este es el titulo de mi blog</h1>
+        <p>
+            Hola mi nombre es Leonardo Ramirez
+            Estoy creando este blog bajo las buenas practicas de 
+            software y desarrollo 
+        </p>
+    </div>
 </body>
 </html>
