--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,7 @@
             Estoy creando este blog bajo las buenas practicas de 
             software y desarrollo 
         </p>
+        <p>Estoy estudiando en la cuarentena</p>
     </div>
 </body>
 </html>
