Agrego parrafo de curso

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,7 @@
             software y desarrollo 
         </p>
         <p>Estoy estudiando en la cuarentena</p>
+        <p>Invito a que hagan mini cursos</p>
     </div>
 </body>
 </html>
