--- a/blogpost.html
+++ b/blogpost.html
@@ -15,7 +15,7 @@
             software y desarrollo 
         </p>
         <p>Estoy estudiando en la cuarentena</p>
-        <p>Invito a que hagan mini cursos</p>
+        <p id="footer">Invito a que hagan mini cursos</p>
     </div>
 </body>
 </html>
