Ajustes del logo y de cuerpo

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,13 +8,20 @@
 </head>
 <body>
     <div id="Container">
-        <h1 id="Container-titulo">Este es el titulo de mi blog</h1>
-        <p>
-            Hola mi nombre es Leonardo Ramirez
-            Estoy creando este blog bajo las buenas practicas de 
-            software y desarrollo 
-        </p>
-        <p>Estoy estudiando en la cuarentena</p>
+        <div
+        id="cabecera">
+        <h1 id="Container-titulo"><img src="images/index.jpg" alt="" id="logo">Este es el titulo de mi blog</h1>
+        
+        </div>
+        <div id="Post">
+
+            <p>
+                Hola mi nombre es Leonardo Ramirez
+                Estoy creando este blog bajo las buenas practicas de 
+                software y desarrollo 
+            </p>
+            <p>Estoy estudiando en la cuarentena</p>
+        </div>
         <p id="footer">Invito a que hagan mini cursos</p>
     </div>
 </body>
